# heart-disease-prediction

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
heart_disease_prediction/: __init__.py  dataset.py  features.py  plots.py
heart_disease_prediction/modeling/: predict.py  train.py
models/: heart_logreg_pipeline.joblib  heart_preprocessor.joblib  heart_random_forest_pipeline.joblib
notebooks/Cleaning and EDA/: heart_disease_eda_1.ipynb
notebooks/Feature Engineering/: heart_disease_v2.ipynb
notebooks/Modeling /: heart_disease_v3modeling.ipynb
