[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "heart_disease_prediction"
version = "0.0.1"
description = "Performing EDA and Building a ML Model to Predict Heart Disease in Patients"
authors = [
  { name = "Will Escalante" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = ">=3.11, <3.13"


[tool.ruff]
line-length = 99
src = ["heart_disease_prediction"]
include = ["pyproject.toml", "heart_disease_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["heart_disease_prediction"]
force-sort-within-sections = true


[tool.poetry.dependencies]
statsmodels = "^0.14.6"
pandas = "^2.3.3"
numpy = "^2.4.0"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
scikit-learn = "^1.8.0"
xgboost = "^3.1.2"
joblib = "^1.5.3"
